# fmtspec

./: LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
docs/: core-api.md  lib-api.md  stream-api.md  types-api.md
scripts/: bench_array.py  benchmark.py  cip.py  dataview.py  micro_bench.py
src/fmtspec/: __init__.py  _core.py  _dataview.py  _exceptions.py  _inspect.py  _protocol.py  _stream.py  _utils.py
src/fmtspec/lib/asn1/: __init__.py  _impl.py
src/fmtspec/lib/msgpack/: __init__.py  _impl.py
src/fmtspec/stream/: __init__.py  _impl.py
src/fmtspec/types/: __init__.py  _array.py  _bitfield.py  _bytes.py  _cip.py  _constants.py  _converter.py  _counted.py  _float.py  _int.py  _lazy.py  _literal.py  _optional.py  _pointer.py  _ref.py  _sized.py  _str.py  _switch.py  _tagged.py  _takeuntil.py
src/fmtspec/types/cip/: __init__.py  _cip.py
tests/: test_array.py  test_base.py  test_bitfields.py  test_cip.py  test_converter.py  test_core_utils.py  test_dataclasses.py  test_derive_fmt.py  test_exceptions.py  test_excess.py  test_float.py  test_import.py  test_inspect.py  test_inspect_exceptions.py  test_ip_address.py  test_literal.py  test_optional.py  test_pointer.py  test_sized.py  test_sizeof.py  test_stream.py  test_switch.py  test_tagged.py  test_takeuntil.py  test_unkeyed.py
tests/examples/: apple.der  test_asn1.py  test_exif.py  test_msgpack.py  test_tls_client_hello.py  test_websockets.py  test_zip.py
