[project]
name = "fmtspec"
version = "0.2.0"
description = "A flexible binary format serialization library for Python"
readme = "README.md"
authors = [
    { name = "Peter Gessler", email = "gesslerpd@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.20.0",
]

[build-system]
requires = ["uv-build>=0.9.26"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "msgpack>=1.1.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
