[project]
name = "fmtspec"
version = "0.5.0"
description = "A flexible binary format serialization library for Python"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Topic :: System :: Networking",
    "Topic :: File Formats",
]
keywords = [
    "serialization",
    "deserialization",
    "encoding",
    "decoding",
    "binary",
    "formats",
    "protocols",
    "wire",
    "packets",
    "parsing",
    "msgpack",
    "msgspec",
    "dataclasses",
    "inspection",
    "stream",
    "streaming",
]
authors = [
    { name = "Peter Gessler", email = "gesslerpd@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/gesslerpd/fmtspec"
Repository = "https://github.com/gesslerpd/fmtspec"
Documentation = "https://github.com/gesslerpd/fmtspec/blob/main/README.md"
Issues = "https://github.com/gesslerpd/fmtspec/issues"
Changelog = "https://github.com/gesslerpd/fmtspec/releases"

[build-system]
requires = ["uv-build>=0.10,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "msgpack>=1.1.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
